[package]
name = "usb-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9.3"
thiserror = "1.0.58"
tracing = "0.1.40"
wasmtime = { workspace = true, features = ["component-model"] }
wasmtime-wasi = { workspace = true }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.44"

[dev-dependencies]
anyhow = "1.0.44"
